<resources>
    <string name="app_name">Moble Box</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_Id">ID</string>
    <string name="Login">Login</string>
    <string name="Cancle">Cancle</string>
    <string name="prompt_password_check">Password Check</string>
    <string name="name">이름</string>
    <string name="gender">성별</string>
    <string name="birth">생년월일 </string>
    <string name="phoneNum">연락처</string>
    <string-array name="gender">
        <item>남성</item>
        <item>여성</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="QA"><![CDATA[Q&A]]></string>
</resources>